--- a/maven2/org/index.html
+++ b/maven2/org/index.html
@@ -4,8 +4,7 @@
 <hr/>
 <pre>
 <a href="../">../</a>
-<a href="net/">net/</a>
-<a href="org/">org/</a>
+<a href="scribe/">scribe/</a>
 </pre>
 </body>
 </html>
