--- a/maven2/index.html
+++ b/maven2/index.html
@@ -1,11 +1,17 @@
-<html>
-<body>
-<h1>Directory listing</h1>
-<hr/>
-<pre>
-<a href="../">../</a>
-<a href="net/">net/</a>
-<a href="org/">org/</a>
-</pre>
-</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+	<head><title>Index of ./maven2</title>
+	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+	<style type="text/css">
+		table, thead, tbody, tr, td { font-family: monospace; white-space: pre; }
+		thead { font-weight: bold; }
+		td.size { text-align: right; }
+	</style>
+	</head><body>
+		<h1>Index of ./maven2</h1>
+		<hr/>
+		<table>
+			<thead><tr><td>Name</td><td>Changed</td><td>Size</td></tr></thead><tbody>
+<tr><td><a href="../">../</a></td><td>2012-06-10 21:05</td><td class="size">4.0K</td></tr><tr><td><a href="net/">net/</a></td><td>2012-06-10 13:59</td><td class="size">4.0K</td></tr><tr><td><a href="org/">org/</a></td><td>2012-06-10 13:59</td><td class="size">4.0K</td></tr><tr><td><a href="index.html">index.html</a></td><td>2012-06-10 21:05</td><td class="size">668</td></tr>		</tbody></table>
+	</body>
 </html>
