--- a/maven2/net/swisstech/bitly/bitly-api-client/index.html
+++ b/maven2/net/swisstech/bitly/bitly-api-client/index.html
@@ -1,14 +1,17 @@
-<html>
-<body>
-<h1>Directory listing</h1>
-<hr/>
-<pre>
-<a href="../">../</a>
-<a href="0.0.4/">0.0.4/</a>
-<a href="0.0.5/">0.0.5/</a>
-<a href="maven-metadata.xml">maven-metadata.xml</a>
-<a href="maven-metadata.xml.md5">maven-metadata.xml.md5</a>
-<a href="maven-metadata.xml.sha1">maven-metadata.xml.sha1</a>
-</pre>
-</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+	<head><title>Index of ./maven2/net/swisstech/bitly/bitly-api-client</title>
+	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+	<style type="text/css">
+		table, thead, tbody, tr, td { font-family: monospace; white-space: pre; }
+		thead { font-weight: bold; }
+		td.size { text-align: right; }
+	</style>
+	</head><body>
+		<h1>Index of ./maven2/net/swisstech/bitly/bitly-api-client</h1>
+		<hr/>
+		<table>
+			<thead><tr><td>Name</td><td>Changed</td><td>Size</td></tr></thead><tbody>
+<tr><td><a href="../">../</a></td><td>2012-06-10 13:59</td><td class="size">4.0K</td></tr><tr><td><a href="0.0.4/">0.0.4/</a></td><td>2012-06-10 13:59</td><td class="size">4.0K</td></tr><tr><td><a href="0.0.5/">0.0.5/</a></td><td>2012-06-10 17:16</td><td class="size">4.0K</td></tr><tr><td><a href="index.html">index.html</a></td><td>2012-06-10 21:05</td><td class="size">742</td></tr><tr><td><a href="maven-metadata.xml">maven-metadata.xml</a></td><td>2012-06-10 17:16</td><td class="size">346</td></tr><tr><td><a href="maven-metadata.xml.md5">maven-metadata.xml.md5</a></td><td>2012-06-10 17:16</td><td class="size">32</td></tr><tr><td><a href="maven-metadata.xml.sha1">maven-metadata.xml.sha1</a></td><td>2012-06-10 17:16</td><td class="size">40</td></tr>		</tbody></table>
+	</body>
 </html>
