--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 		<hr/>
 		<table>
 			<thead><tr><td>Name</td><td>Changed</td><td>Size</td></tr></thead><tbody>
-<tr><td><a href="maven2/">maven2/</a></td><td>2012-06-10 18:57</td><td class="size">4.0K</td></tr><tr><td><a href="index.html">index.html</a></td><td>2012-06-10 21:05</td><td class="size">564</td></tr><tr><td><a href="update-repository-index.sh">update-repository-index.sh</a></td><td>2012-06-10 21:05</td><td class="size">1.3K</td></tr>		</tbody></table>
+<tr><td><a href="maven2/">maven2/</a></td><td>2012-06-10 18:57</td><td class="size">4.0K</td></tr><tr><td><a href="update-repository-index.sh">update-repository-index.sh</a></td><td>2012-06-10 21:07</td><td class="size">1.3K</td></tr>		</tbody></table>
 	</body>
 </html>
