--- a/maven2/net/swisstech/bitly/bitly-api-client/index.html
+++ b/maven2/net/swisstech/bitly/bitly-api-client/index.html
@@ -12,6 +12,6 @@
 		<hr/>
 		<table>
 			<thead><tr><td>Name</td><td>Changed</td><td>Size</td></tr></thead><tbody>
-<tr><td><a href="../">../</a></td><td>2012-06-10 13:59</td><td class="size">4.0K</td></tr><tr><td><a href="0.0.4/">0.0.4/</a></td><td>2012-06-10 13:59</td><td class="size">4.0K</td></tr><tr><td><a href="0.0.5/">0.0.5/</a></td><td>2012-06-10 17:16</td><td class="size">4.0K</td></tr><tr><td><a href="index.html">index.html</a></td><td>2012-06-10 21:05</td><td class="size">742</td></tr><tr><td><a href="maven-metadata.xml">maven-metadata.xml</a></td><td>2012-06-10 17:16</td><td class="size">346</td></tr><tr><td><a href="maven-metadata.xml.md5">maven-metadata.xml.md5</a></td><td>2012-06-10 17:16</td><td class="size">32</td></tr><tr><td><a href="maven-metadata.xml.sha1">maven-metadata.xml.sha1</a></td><td>2012-06-10 17:16</td><td class="size">40</td></tr>		</tbody></table>
+<tr><td><a href="../">../</a></td><td>2012-06-10 13:59</td><td class="size">4.0K</td></tr><tr><td><a href="0.0.4/">0.0.4/</a></td><td>2012-06-10 13:59</td><td class="size">4.0K</td></tr><tr><td><a href="0.0.5/">0.0.5/</a></td><td>2012-06-10 17:16</td><td class="size">4.0K</td></tr><tr><td><a href="maven-metadata.xml">maven-metadata.xml</a></td><td>2012-06-10 17:16</td><td class="size">346</td></tr><tr><td><a href="maven-metadata.xml.md5">maven-metadata.xml.md5</a></td><td>2012-06-10 17:16</td><td class="size">32</td></tr><tr><td><a href="maven-metadata.xml.sha1">maven-metadata.xml.sha1</a></td><td>2012-06-10 17:16</td><td class="size">40</td></tr>		</tbody></table>
 	</body>
 </html>
