--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 	<head><title>Index of .</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<style type="text/css">
-		table, thead, tbody, tr, td { font-family: monospace; white-space: pre; }
+		table, thead, tbody, tr, td, div.footer { font-family: monospace; white-space: pre; }
 		thead { font-weight: bold; }
-		td.size { text-align: right; }
+		td.size, div.footer { text-align: right; }
 	</style>
 	</head><body>
 		<h1>Index of .</h1>
 		<hr/>
 		<table>
 			<thead><tr><td>Name</td><td>Changed</td><td>Size</td></tr></thead><tbody>
-<tr><td><a href="maven2/">maven2/</a></td><td>2012-06-10 21:11</td><td class="size">4.0K</td></tr><tr><td><a href="update-repository-index.sh">update-repository-index.sh</a></td><td>2012-06-10 21:11</td><td class="size">1.3K</td></tr>		</tbody></table>
+<tr><td><a href="maven2/">maven2/</a></td><td>2012-06-10 21:11</td><td class="size">4.0K</td></tr><tr><td><a href="update-repository-index.sh">update-repository-index.sh</a></td><td>2012-06-14 16:37</td><td class="size">1.4K</td></tr>		</tbody></table>
+		<hr/>
+		<div class="footer">Last Updated: Thu Jun 14 16:37:37 CEST 2012</div>
 	</body>
 </html>
