--- a/maven2/net/index.html
+++ b/maven2/net/index.html
@@ -3,9 +3,9 @@
 	<head><title>Index of ./maven2/net</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<style type="text/css">
-		table, thead, tbody, tr, td { font-family: monospace; white-space: pre; }
+		table, thead, tbody, tr, td, div.footer { font-family: monospace; white-space: pre; }
 		thead { font-weight: bold; }
-		td.size { text-align: right; }
+		td.size, div.footer { text-align: right; }
 	</style>
 	</head><body>
 		<h1>Index of ./maven2/net</h1>
@@ -13,5 +13,7 @@
 		<table>
 			<thead><tr><td>Name</td><td>Changed</td><td>Size</td></tr></thead><tbody>
 <tr><td><a href="../">../</a></td><td>2012-06-10 21:11</td><td class="size">4.0K</td></tr><tr><td><a href="swisstech/">swisstech/</a></td><td>2012-06-10 21:11</td><td class="size">4.0K</td></tr>		</tbody></table>
+		<hr/>
+		<div class="footer">Last Updated: Thu Jun 14 16:37:37 CEST 2012</div>
 	</body>
 </html>
