--- a/maven2/net/swisstech/bitly/bitly-api-client/index.html
+++ b/maven2/net/swisstech/bitly/bitly-api-client/index.html
@@ -12,8 +12,8 @@
 		<hr/>
 		<table>
 			<thead><tr><td>Name</td><td>Changed</td><td>Size</td></tr></thead><tbody>
-<tr><td><a href="../">../</a></td><td>2012-06-10 21:11</td><td class="size">4.0K</td></tr><tr><td><a href="0.0.4/">0.0.4/</a></td><td>2012-06-10 21:11</td><td class="size">4.0K</td></tr><tr><td><a href="0.0.5/">0.0.5/</a></td><td>2012-06-10 21:11</td><td class="size">4.0K</td></tr><tr><td><a href="0.0.6/">0.0.6/</a></td><td>2012-06-14 16:08</td><td class="size">4.0K</td></tr><tr><td><a href="0.0.7/">0.0.7/</a></td><td>2012-06-14 22:53</td><td class="size">4.0K</td></tr><tr><td><a href="maven-metadata.xml">maven-metadata.xml</a></td><td>2012-06-14 22:53</td><td class="size">408</td></tr><tr><td><a href="maven-metadata.xml.md5">maven-metadata.xml.md5</a></td><td>2012-06-14 22:53</td><td class="size">32</td></tr><tr><td><a href="maven-metadata.xml.sha1">maven-metadata.xml.sha1</a></td><td>2012-06-14 22:53</td><td class="size">40</td></tr>		</tbody></table>
+<tr><td><a href="../">../</a></td><td>2012-06-10 21:11</td><td class="size">4.0K</td></tr><tr><td><a href="0.0.4/">0.0.4/</a></td><td>2012-06-10 21:11</td><td class="size">4.0K</td></tr><tr><td><a href="0.0.5/">0.0.5/</a></td><td>2012-06-10 21:11</td><td class="size">4.0K</td></tr><tr><td><a href="0.0.6/">0.0.6/</a></td><td>2012-06-14 16:08</td><td class="size">4.0K</td></tr><tr><td><a href="0.0.7/">0.0.7/</a></td><td>2012-06-14 22:53</td><td class="size">4.0K</td></tr><tr><td><a href="0.5.0/">0.5.0/</a></td><td>2012-06-16 17:51</td><td class="size">4.0K</td></tr><tr><td><a href="maven-metadata.xml">maven-metadata.xml</a></td><td>2012-06-16 17:51</td><td class="size">439</td></tr><tr><td><a href="maven-metadata.xml.md5">maven-metadata.xml.md5</a></td><td>2012-06-16 17:51</td><td class="size">32</td></tr><tr><td><a href="maven-metadata.xml.sha1">maven-metadata.xml.sha1</a></td><td>2012-06-16 17:51</td><td class="size">40</td></tr>		</tbody></table>
 		<hr/>
-		<div class="footer">Last Updated: Thu Jun 14 22:53:34 CEST 2012</div>
+		<div class="footer">Last Updated: Sat Jun 16 17:51:53 CEST 2012</div>
 	</body>
 </html>
