--- a/maven2/org/scribe/scribe/index.html
+++ b/maven2/org/scribe/scribe/index.html
@@ -12,8 +12,8 @@
 		<hr/>
 		<table>
 			<thead><tr><td>Name</td><td>Changed</td><td>Size</td></tr></thead><tbody>
-<tr><td><a href="../">../</a></td><td>2012-06-10 21:11</td><td class="size">4.0K</td></tr><tr><td><a href="1.3.2.stackmagic/">1.3.2.stackmagic/</a></td><td>2012-06-10 21:11</td><td class="size">4.0K</td></tr><tr><td><a href="1.4.0.stackmagic/">1.4.0.stackmagic/</a></td><td>2012-06-23 18:47</td><td class="size">4.0K</td></tr><tr><td><a href="maven-metadata.xml">maven-metadata.xml</a></td><td>2012-06-23 18:47</td><td class="size">360</td></tr><tr><td><a href="maven-metadata.xml.md5">maven-metadata.xml.md5</a></td><td>2012-06-23 18:47</td><td class="size">32</td></tr><tr><td><a href="maven-metadata.xml.sha1">maven-metadata.xml.sha1</a></td><td>2012-06-23 18:47</td><td class="size">40</td></tr>		</tbody></table>
+<tr><td><a href="../">../</a></td><td>2012-06-10 21:11</td><td class="size">4.0K</td></tr><tr><td><a href="1.3.2.stackmagic/">1.3.2.stackmagic/</a></td><td>2012-06-10 21:11</td><td class="size">4.0K</td></tr><tr><td><a href="1.4.0.stackmagic/">1.4.0.stackmagic/</a></td><td>2012-06-23 18:47</td><td class="size">4.0K</td></tr><tr><td><a href="1.4.1.stackmagic/">1.4.1.stackmagic/</a></td><td>2012-06-23 19:06</td><td class="size">4.0K</td></tr><tr><td><a href="maven-metadata.xml">maven-metadata.xml</a></td><td>2012-06-23 19:06</td><td class="size">402</td></tr><tr><td><a href="maven-metadata.xml.md5">maven-metadata.xml.md5</a></td><td>2012-06-23 19:06</td><td class="size">32</td></tr><tr><td><a href="maven-metadata.xml.sha1">maven-metadata.xml.sha1</a></td><td>2012-06-23 19:06</td><td class="size">40</td></tr>		</tbody></table>
 		<hr/>
-		<div class="footer">Last Updated: Sat Jun 23 18:47:56 CEST 2012</div>
+		<div class="footer">Last Updated: Sat Jun 23 19:06:57 CEST 2012</div>
 	</body>
 </html>
