--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<hr/>
 		<table>
 			<thead><tr><td>Name</td><td>Changed</td><td>Size</td></tr></thead><tbody>
-<tr><td><a href="maven2/">maven2/</a></td><td>2012-06-10 21:11</td><td class="size">4.0K</td></tr><tr><td><a href="update-repository-index.sh">update-repository-index.sh</a></td><td>2012-06-14 16:37</td><td class="size">1.4K</td></tr>		</tbody></table>
+<tr><td><a href="maven2/">maven2/</a></td><td>2012-06-24 18:15</td><td class="size">4.0K</td></tr><tr><td><a href="travis-ci-dashboard.html">travis-ci-dashboard.html</a></td><td>2012-06-24 18:20</td><td class="size">6.3K</td></tr><tr><td><a href="update-repository-index.sh">update-repository-index.sh</a></td><td>2012-06-24 18:15</td><td class="size">1.4K</td></tr>		</tbody></table>
 		<hr/>
-		<div class="footer">Last Updated: Sun Jun 24 13:36:59 CEST 2012</div>
+		<div class="footer">Last Updated: Sun Jun 24 18:22:07 CEST 2012</div>
 	</body>
 </html>
