--- a/travis-ci-dashboard.html
+++ b/travis-ci-dashboard.html
@@ -22,6 +22,7 @@ Ideas for more:
 * order panels: failed on top, the build in progress then ok - each group sorted by newest on top
 * make it completely self-contained, load once, let it run forever
 * back/fwd buttons to navigate between builds, button to reset - kinda duplicates the past builds history
+* use http://travis-ci.org/workers.json to check if one of my projects is currently pending a build
 -->
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 	<head>
