--- a/travis-ci-dashboard.html
+++ b/travis-ci-dashboard.html
@@ -81,27 +81,8 @@ Ideas for more:
 				text-align: right;
 			}
 		</style>
+		<script type="text/javascript" src="https://raw.github.com/zachleat/Humane-Dates/1b557e21c8ec0a8889af0f78d1ee1eba33a2a259/humane.js"></script>
 		<script type="text/javascript">
-			// blatantly stolen from http://ejohn.org/files/pretty.js (MIT License)
-			function prettyDate(time){
-				var date = new Date((time || "").replace(/-/g,"/").replace(/[TZ]/g," ")),
-					diff = (((new Date()).getTime() - date.getTime()) / 1000),
-					day_diff = Math.floor(diff / 86400);
-
-				if ( isNaN(day_diff) || day_diff < 0 || day_diff >= 31 )
-					return;
-
-				return day_diff == 0 && (
-						diff < 60 && "just now" ||
-						diff < 120 && "1 minute ago" ||
-						diff < 3600 && Math.floor( diff / 60 ) + " minutes ago" ||
-						diff < 7200 && "1 hour ago" ||
-						diff < 86400 && Math.floor( diff / 3600 ) + " hours ago") ||
-					day_diff == 1 && "Yesterday" ||
-					day_diff < 7 && day_diff + " days ago" ||
-					day_diff < 31 && Math.ceil( day_diff / 7 ) + " weeks ago";
-			}
-
 			// read the response and update the dashboard
 			function parseResponse(json) {
 				if (json.length < 1) {
@@ -166,7 +147,7 @@ Ideas for more:
 				panel.appendChild(repoDesc)
 
 				buildDone = document.createElement("div")
-				buildDone.appendChild(document.createTextNode(prettyDate(json.last_build_finished_at)))
+				buildDone.appendChild(document.createTextNode(humaneDate(json.last_build_finished_at)))
 				panel.appendChild(buildDone)
 
 				return panel
