--- a/travis-ci-dashboard.html
+++ b/travis-ci-dashboard.html
@@ -66,6 +66,9 @@ Ideas for more:
 			#result > div.fail {
 				background-color: #AA0000;
 			}
+			#result > div.unknown {
+				background-color: #666666;
+			}
 			#result > div > div {
 				white-space: nowrap;
 				overflow: hidden;
@@ -112,11 +115,14 @@ Ideas for more:
 
 			function buildPanel(json) {
 				panel = document.createElement("div")
-				if (json.last_build_result) {
-					panel.setAttribute("class", "fail")
+				if (json.last_build_result == 0) {
+					panel.setAttribute("class", "ok")
+				}
+				else if (json.last_build_result == null) {
+					panel.setAttribute("class", "unknown")
 				}
 				else {
-					panel.setAttribute("class", "ok")
+					panel.setAttribute("class", "fail")
 				}
 	
 				repoName = document.createElement("div")
