--- a/travis-ci-dashboard.html
+++ b/travis-ci-dashboard.html
@@ -24,6 +24,7 @@ Ideas for more:
 * back/fwd buttons to navigate between builds, button to reset - kinda duplicates the past builds history
 * use http://travis-ci.org/workers.json to check if one of my projects is currently pending a build
 * support a comma separated list of usernames as in #stackmagic,twitter and display a single list containing all projects of all users
+* update all the timestamp in the ui the same as the last update ts on top
 -->
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 	<head>
