--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<hr/>
 		<table>
 			<thead><tr><td>Name</td><td>Changed</td><td>Size</td></tr></thead><tbody>
-<tr><td><a href="maven2/">maven2/</a></td><td>2012-06-24 18:22</td><td class="size">4.0K</td></tr><tr><td><a href="travis-ci-dashboard.html">travis-ci-dashboard.html</a></td><td>2012-06-26 00:10</td><td class="size">7.2K</td></tr><tr><td><a href="update-repository-index.sh">update-repository-index.sh</a></td><td>2012-06-24 18:15</td><td class="size">1.4K</td></tr>		</tbody></table>
+<tr><td><a href="maven2/">maven2/</a></td><td>2012-06-30 16:52</td><td class="size">4.0K</td></tr><tr><td><a href="README.textile">README.textile</a></td><td>2012-09-03 23:23</td><td class="size">888</td></tr><tr><td><a href="travis-ci-dashboard.html">travis-ci-dashboard.html</a></td><td>2012-09-03 23:31</td><td class="size">7.6K</td></tr><tr><td><a href="update-repository-index.sh">update-repository-index.sh</a></td><td>2012-06-30 16:52</td><td class="size">1.4K</td></tr>		</tbody></table>
 		<hr/>
-		<div class="footer">Last Updated: Sat Jun 30 16:44:35 CEST 2012</div>
+		<div class="footer">Last Updated: Mon Sep  3 23:39:23 CEST 2012</div>
 	</body>
 </html>
