bitly-api-client-0.7.2

--- a/maven2/com/index.html
+++ b/maven2/com/index.html
@@ -12,8 +12,8 @@
 		<hr/>
 		<table>
 			<thead><tr><td>Name</td><td>Changed</td><td>Size</td></tr></thead><tbody>
-<tr><td><a href="../">../</a></td><td>2013-05-31 12:15</td><td class="size">4.0K</td></tr><tr><td><a href="corundumstudio/">corundumstudio/</a></td><td>2013-05-31 12:17</td><td class="size">4.0K</td></tr>		</tbody></table>
+<tr><td><a href="../">../</a></td><td>2014-02-09 11:35</td><td class="size">4.0K</td></tr><tr><td><a href="corundumstudio/">corundumstudio/</a></td><td>2014-02-09 11:35</td><td class="size">4.0K</td></tr>		</tbody></table>
 		<hr/>
-		<div class="footer">Last Updated: Sun Jul 28 21:57:32 CEST 2013</div>
+		<div class="footer">Last Updated: Sun Feb  9 11:35:36 CET 2014</div>
 	</body>
 </html>
